# openssl_practice

./: CMakeLists.txt  Makefile  aes.c  aesgcm.c  fops.c  fops.h
